Fix padding on Our Mission and About Us section images to align with section headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ h2 {
 #main-page-grid img {
     height: auto;
     width: 100%;
+    padding-top: 15px;
 }
 
 #main-page-grid h2 {
